@@ -17,6 +17,7 @@ version <next>:
 - MIDI Sample Dump Standard demuxer
 - readeia608 filter
 - Sample Dump eXchange demuxer
+- abitscope multimedia filter
 
 version 3.2:
 - libopenmpt demuxer
